[package]
name = "univerge_renderer"
version = "0.0.1"
description = "Provides rendering functionality for univerge."
keywords = ["univerge"]
authors = [
    "Vasile Campeanu <contact@vasilecampeanu.com>"
]
license = "MIT"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
winit = "0.28.6"
env_logger = "0.10"
log = "0.4.20"
wgpu = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "=0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
]}
